Add Climber slow, change shooter speeds, left auto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
     "cinttypes": "cpp",
     "typeinfo": "cpp",
     "bitset": "cpp",
-    "regex": "cpp"
+    "regex": "cpp",
+    "numbers": "cpp"
   }
 }
